--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/crlsrgz/One-page.git"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
