--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "crlsrgz",
   "license": "",
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@react-three/eslint-plugin": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@vitejs/plugin-react": "^4.1.1",
