--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,15 @@
           "geometry",
           "material",
           "position",
-          "explodedModel"
+          "explodedModel",
+        "shadow-normalBias",
+        "shadow-mapSize",
+        "shadow-camera-top",
+        "shadow-camera-right",
+        "shadow-camera-bottom",
+        "shadow-camera-left",
+        "shadow-camera-near",
+        "shadow-camera-far"
         ]
       }
     ]
