General::build: set up vite for deploy in a subfolder Add comments to disable some imports

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build --emptyOutDir --base=/",
+    "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
     "lint": "eslint \"src/**/*.{js,ts,jsx,tsx}\" --quiet",
